--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,7 @@ ul li.playing {
     position: absolute;
     height: 10000px;
     width: 30px;
+    left: 15px;
     background: linear-gradient(180deg, rgba(166, 24, 74, 1) 0%, rgba(166, 24, 74, 1) 70%, rgba(166, 24, 74, 0.8631827731092436) 84%, rgba(166, 24, 74, 0) 100%);
     text-align: center;
     font-size: 20px;
