--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,12 @@ ul li.playing {
     color: var(--violet);
 }
 
+.icon1{
+    width:40px;
+    height:auto;
+    object-fit:contain
+}
+
 
 /* Marquee */ 
 .marquee-section_row{
@@ -620,15 +626,225 @@ ul li.playing {
 }
 
 
+/* pop up container */
+.pop_up_container{
+    position:fixed;
+    top:0;
+    left:0;
+
+    width:100%;
+    height:100%;
+    z-index:99990; 
+
+    background: #00000098;
+    backdrop-filter: blur(62px);
+
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.pop_up_container.active{
+    display:none;
+}
+
+.popUp{
+    width:90%;
+    height:600px;
+    background:white;
+
+    position:relative;
+
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+
+    border-radius:50px;
+    background-color:#EF3830;
+    color:white;
+    overflow:hidden;
+}
+
+.popUp p,
+.popUp .btns{
+    position:relative;
+    z-index:99;
+    text-align:center;
+
+    display:flex; 
+    align-items:center;
+    justify-content:center;
+
+    gap:3rem;
+}
+
+
+.popUp p{
+    width:90%;
+    font-size:70px;   
+}
+
+.popUp .btns button{
+    font-size:30px;  
+
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+
+    background-color:transparent !important;
+    border:none;
+
+    color:white;
+
+    width:391px;
+    height:114px;
+
+    position:relative;
+    text-shadow: 0px 4px 4px  #000000;
+
+}
+
+.popUp .btns button span{
+    z-index:0;
+    position:relative;
+}
+
+.popUp .btns button::before{
+    content:'';
+    position:absolute;
+
+    z-index:0;
+ 
+    width:100%;
+    height:100%; 
+
+    background-image:url('../asset/img/bg_btn.png');
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:contain;
+}
+
+/* .popUp::before */
+.popUp .bg{
+    /* content:''; */
+    position:absolute;
+
+    z-index:0;
+
+    border-radius:50px;
+    width:97%;
+    height:95%;
+    background-color:#000000;
+
+    display:flex; 
+    align-items:center;
+    justify-content:center;
+    overflow:hidden;
+}
+
+/* .popUp::after */
+.popUp .bg::after{
+    content:'';
+    position:absolute;
+
+    z-index:1;
+ 
+    width:110%; 
+    height:500%;
+
+    opacity:0.2;
+    background-image:url('../asset/img/bg_popup.png');
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:contain;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.shake {
+    animation: shake 0.5s;
+    animation-iteration-count: 1;
+}
+
+
 /* ------------------------------------------------------------------------------------------------------------------------------ */
 
 
+/* MOBILE VERSION */
+@media (max-width: 1024px) { 
+    .popUp{
+        width:90%;
+        height:80%;
+    }
+
+    .popUp p{
+        font-size:6vw;
+    }
+
+    .popUp p, 
+    .popUp .btns{
+        flex-direction:column
+    }
+}
+
+@media (max-width: 500px){
+    .popUp,
+    .popUp .bg{
+        border-radius: 30px;
+
+        gap:4rem;
+    }
+    .popUp .bg{
+        height:98%;
+    }
+
+    .popUp .btns{
+        width:100%;
+    }
+    
+    .popUp .btns button{
+        width:70%;
+        font-size:4vw;
+        height:40px;
+    }
+
+    .popUp .bg::after{ 
+        width:190%; 
+        height:900%; 
+    }
+    
+}
+
 /* DESKTOP VERSION */
+
 @media (min-width: 1022px) and (max-width: 1922px) {
     .marquee-section_row{
         height: 800%; 
     }
 }
+
+@media (min-width: 1280px) {
+    .popUp{
+        width:1300px;
+        height:671px;
+    }
+}
+
+
 @media (min-width: 992px) {
 
     /* Blok Warna Biru Atas Awal */
@@ -637,6 +853,7 @@ ul li.playing {
     /* Welcome */
     .welcome-section {
         /* height: 750px; */
+        
     }
 
     .welcome .img-welcome-xp img {
