--- a/css/style.css
+++ b/css/style.css
@@ -780,6 +780,9 @@ ul li.playing {
     animation-iteration-count: 1;
 }
 
+.new_meme{
+    width:100%;
+}
 
 /* ------------------------------------------------------------------------------------------------------------------------------ */
 
