--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,11 @@
 }
 
 .welcome .profile-1:hover {
-    background-color: #4D73D4;
+    /* background-color: #4D73D4;
     padding: 10px;
     max-width: 100%;
     border-radius: 10px;
-    animation: shake 0.6s infinite;
+    animation: shake 0.6s infinite; */
 }
 
 @-webkit-keyframes shake {
@@ -379,7 +379,10 @@ body{
 .video-youtube iframe {
     width: 100%;
     height: 100%;
+}
 
+a:hover{ 
+    text-decoration:none;
 }
 
 
@@ -518,8 +521,8 @@ body{
 }
 
 .progress-area:hover .progress-bar::before {
-    opacity: 1;
-    pointer-events: auto;
+    /* opacity: 1;
+    pointer-events: auto; */
 }
 
 .progress-area .song-timer {
@@ -885,8 +888,32 @@ ul li.playing {
 
 
 /* animation */
+/* float */
+.float{
+    animation: float_animation 5s linear infinite; 
+}
+
+@keyframes float_animation {
+    0%,100% {
+        transform: translateY(0vw);
+    }
+    50% {
+        transform: translateY(5vw)
+    }
+}
+
+/* cloud */
 .cloud{
-    animation: cloud_animation 5s linear infinite; 
+    animation: cloud_animation 25s linear infinite; 
+}
+
+@keyframes cloud_animation {
+    0%,100% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(15vw)
+    }
 }
 
 /* memes */
